Move config files to /home

--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -24,7 +24,7 @@ all-servers
 no-hosts
 
 # If you want to read another file, use this.
-addn-hosts=/tmp/hosts.block
+addn-hosts=/home/dnsmasq/hosts.block
 
 # Set the domain for dnsmasq. this is optional, but if it is set, it
 # does the following things.
@@ -122,6 +122,7 @@ cache-size=500
 # "bert" another name, bertrand
 #cname=bertand,bert
 cname=gitlab.ptb2.me,depot.ptb2.me
+cname=jackett.ptb2.me,depot.ptb2.me
 cname=mail.ptb2.me,depot.ptb2.me
 cname=movies.ptb2.me,depot.ptb2.me
 cname=music.ptb2.me,depot.ptb2.me
@@ -130,6 +131,7 @@ cname=nzb.ptb2.me,depot.ptb2.me
 cname=plex.ptb2.me,depot.ptb2.me
 cname=setup.ptb2.me,depot.ptb2.me
 cname=sync.ptb2.me,depot.ptb2.me
+cname=torrent.ptb2.me,depot.ptb2.me
 cname=tv.ptb2.me,depot.ptb2.me
 
 log-facility=-
